[package]
name = "omnium"
description = "A set of extensions for building web applications on axum."
repository = "https://github.com/ctidd/omnium"
license = "MIT"
version = "0.10.4"
edition = "2021"

[dependencies]
anyhow = "^1.0.97"
async-trait = "0.1.89"
axum = { version = "^0.8.1", features = ["macros"] }
axum-extra = { version = "^0.10.0", features = ["cookie", "query"] }
http-body-util = "^0.1.3"
hyper = "^1.6.0"
log = "^0.4.27"
serde = { version = "^1.0.219", features = ["derive"] }
serde_json = "^1.0.140"
tokio = "^1.44.2"
tower = "^0.5.2"
